Fix /ar/ alignment
align-items: center; appears to not have the desired effect, but
leaving it unset does. The en locale remains with align-items: center;

--- a/src/css/pages/SurahIndex.scss
+++ b/src/css/pages/SurahIndex.scss
@@ -92,6 +92,7 @@ body .root .content.theme.ar {
     li.surah {
       min-height: 55px;
       a {
+        align-items: unset;
         div:first-child {
           .id {
             font-size: x-large;
